Fri Jul 19 14:56:00 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_unprotect_logging): use (void *) for first parameter
	  because VALUE is not defined before including ruby/ruby.h.

Fri Jul 19 14:19:48 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/pathname/pathname.c (path_inspect): use PRIsVALUE to preserve
	  the result encoding.

Fri Jul 19 12:35:41 2013  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_tcp.rb (test_initialize_failure): Use EADDRNOTAVAIL
	  to test an error message generated by bind() failure.

Fri Jul 19 11:27:38 2013  Zachary Scott  <e@zzak.io>

	* lib/racc/parser.rb: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:26:28 2013  Zachary Scott  <e@zzak.io>

	* ext/psych/lib/psych*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:25:12 2013  Zachary Scott  <e@zzak.io>

	* lib/rdoc/*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:23:55 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:16:54 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#to_set): Define Set#to_set so that aSet.to_set
	  returns self. [Fixes GH-359]

Fri Jul 19 11:10:23 2013  Zachary Scott  <e@zzak.io>

	* lib/rake/*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 01:04:14 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/bignum/intpack.c: Renamed from ext/-test-/bignum/pack.c.
	  (Init_intpack): Renamed from Init_pack.
	  Reported by Naohisa Goto.  [ruby-dev:47526] [Bug #8655]

Fri Jul 19 00:54:27 2013  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_array.rb (test_count): add a test case for #count
	  with an argument. See Bug #8654.
