@@ -278,6 +278,7 @@ void rb_w32_init_file(void);
 void Init_heap(void);
 void *ruby_mimmalloc(size_t size);
 void rb_objspace_set_event_hook(const rb_event_flag_t event);
+void rb_gc_writebarrier_remember_promoted(VALUE obj);
 
 /* hash.c */
 struct st_table *rb_hash_tbl_raw(VALUE hash);
